# RAG-Agent

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  main.py  pyproject.toml  rag_manager.py
cli/: main.py
docs/: DEPLOYMENT.md
module/: agent_brain.py
modules/: document_handler.py
os_tracer_core/: Cargo.toml
os_tracer_core/src/: main.rs
rag/: config_rag.py  test_rag.py
services/: __init__.py
services/accuracy/: Dockerfile  main.py
services/agent/: Dockerfile  main.py
services/agent/prompts/: system_prompts.py
services/agent/tools/: knowledge_search.py  web_search.py
services/document/: Dockerfile  main.py
services/document/detectors/: magika_detector.py
services/document/extractors/: markitdown_extractor.py  mineru_extractor.py
services/document/pipeline/: document_pipeline.py
services/editor/: Dockerfile  main.py
services/frontend/: Dockerfile  app.py
services/frontend/.chainlit/: config.json
services/gateway/: Dockerfile  main.py
services/gateway/routers/: chat.py  documents.py  health.py  research.py  voice.py
services/rag/: Dockerfile  main.py
services/rag/embeddings/: embedding_manager.py
services/rag/index/: chroma_manager.py
services/rag/ingest/: chunker.py
services/rag/retriever/: vector_retriever.py
services/research/: Dockerfile  main.py
services/voice/: Dockerfile  main.py
shared/config/: settings.py
shared/models/: __init__.py  agent.py  chat.py  document.py
shared/utils/: logger.py
tests/: test_integration.py
