[project]
name = "agent-workspace"
version = "0.1.0"
description = "Hệ thống AI Agent OS mã hóa RAG độc lập"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "raganything[all]>=0.1.0",
    "magika>=0.5.0",
    "magic-pdf[full]>=0.6.0",
    "pydub>=0.25.1",
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "pyaudio>=0.2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
