[project]
name = "rag-all"
version = "0.1.0"
description = "AI-Agent hỗ trợ nghiên cứu, học tập, làm luận án, luận văn"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "RAG-ALL Team"}
]
keywords = ["rag", "ai-agent", "research", "deep-research", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # === API / Server ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",

    # === Agent Framework ===
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",

    # === LLM Providers ===
    "langchain-ollama>=0.2.0",
    "langchain-google-genai>=2.0.0",

    # === RAG / Vector Store ===
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # === Document Processing ===
    "markitdown[all]>=0.1.0",
    "magika>=1.0.0",

    # === Web Crawling / Search ===
    "crawl4ai>=0.9.0",
    "duckduckgo-search>=6.0.0",
    "arxiv>=2.1.0",
    "semanticscholar>=0.7.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",

    # === Citation / Verification ===
    "crossref-commons>=0.1.0",

    # === Voice ===
    "edge-tts>=6.1.0",
    "faster-whisper>=1.0.0",

    # === CLI ===
    "rich>=13.0.0",
    "typer>=0.12.0",
    "questionary>=2.0.0",

    # === WebUI ===
    "chainlit>=2.0.0",

    # === Utilities ===
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
rag-all = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
