[package]
name = "os_tracer_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Xử lý bất đồng bộ siêu tốc cho Daemon
tokio = { version = "1.0", features = ["full"] }
# Thư viện ghi và truy vấn SQLite tốc độ cao
rusqlite = { version = "0.31.0", features = ["bundled"] }
# Thao tác với thời gian hệ thống
chrono = "0.4.38"
# Tự động quét và tìm kiếm file cực nhanh trên ổ đĩa thay thế lệnh `find`
walkdir = "2.5.0"
